# rocks

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  simplify_csv.py
Formula/: rocks.rb
filtered_data/: equities.csv  etfs.csv
src/: debug.rs  main.rs  tickers.rs
