[package]
name = "rocks"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
clap = { version = "4.3.2", features = ["derive"] }
trie-rs = "0.1.1"
csv = "1.2.2"
itertools = "0.9"

[build-dependencies]